WIP: Model comparison

--- a/5DEEP/Project/notebooks/en/4-The_CNN_model.ipynb
+++ b/5DEEP/Project/notebooks/en/4-The_CNN_model.ipynb
@@ -68,6 +68,7 @@
     "\n",
     "# Math\n",
     "import numpy\n",
+    "import pandas\n",
     "\n",
     "# Data\n",
     "from matplotlib import pyplot\n",
@@ -865,6 +866,27 @@
     "start_time = timer()\n",
     "training_cnn_milva = model_cnn_milva.fit(x=x_train, y=y_train, validation_split=0.080, batch_size=batch_size, epochs=epochs, callbacks=[checkpoint_callback], verbose=1)\n",
     "print(f\"The training of the \\\"{model_cnn_milva.name}\\\" model took {timedelta(seconds=(timer() - start_time))}.\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "We save the training history to the disk for later use."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "history = pandas.DataFrame(training_cnn_milva.history)\n",
+    "history.to_csv(MODELS_FOLDER / \"histories\" / \"2_model-cnn-milva_16-02-23_10-45.csv\")"
    ],
    "metadata": {
     "collapsed": false
