WIP: Model comparison

--- a/5DEEP/Project/notebooks/en/5-The_model_competition.ipynb
+++ b/5DEEP/Project/notebooks/en/5-The_model_competition.ipynb
@@ -71,6 +71,7 @@
     "import numpy\n",
     "\n",
     "# Data\n",
+    "import pandas\n",
     "from matplotlib import pyplot\n",
     "\n",
     "# Model processing\n",
@@ -904,6 +905,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "history_chandelle = pandas.DataFrame(training_chandelle.history)\n",
+    "history_chandelle.to_csv(MODELS_FOLDER / \"histories\" / \"3_model-cnn-chandelle_16-02-23_10-45.csv\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "outputs": [],
    "source": [
@@ -1483,6 +1496,18 @@
     "start_time = timer()\n",
     "training_toto = model_toto.fit(x=x_train, y=y_train, validation_split=0.080, batch_size=batch_size, epochs=epochs, callbacks=[checkpoint_callback], verbose=1)\n",
     "print(f\"The training of the \\\"{model_toto.name}\\\" model took {timedelta(seconds=(timer() - start_time))}.\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "history_toto = pandas.DataFrame(training_toto.history)\n",
+    "history_toto.to_csv(MODELS_FOLDER / \"histories\" / \"4_model-cnn-toto_16-02-23_10-45.csv\")"
    ],
    "metadata": {
     "collapsed": false
@@ -2092,6 +2117,18 @@
     "start_time = timer()\n",
     "training_noname = model_noname.fit(x=x_train, y=y_train, validation_split=0.080, batch_size=batch_size, epochs=epochs, callbacks=[checkpoint_callback], verbose=1)\n",
     "print(f\"The training of the \\\"{model_noname.name}\\\" model took {timedelta(seconds=(timer() - start_time))}.\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "history_noname = pandas.DataFrame(training_noname.history)\n",
+    "history_noname.to_csv(MODELS_FOLDER / \"histories\" / \"5_model-cnn-noname_16-02-23_10-45.csv\")"
    ],
    "metadata": {
     "collapsed": false
