Conclusion the CNN model notebook

--- a/5DEEP/Project/notebooks/en/4-The_CNN_model.ipynb
+++ b/5DEEP/Project/notebooks/en/4-The_CNN_model.ipynb
@@ -1111,7 +1111,9 @@
    "cell_type": "markdown",
    "source": [
     "## E - Conclusion of the CNN model\n",
-    "**TODO**"
+    "As expected, the Convolutional Neural Network did a better job than the ANN network. This can be explained by the use of two-dimensional convolution layers that take more data as input. The model can extract more features and thus get better results.\n",
+    "\n",
+    "In the next notebook, we will create different CNN models and compare them to elect one as the best of all."
    ],
    "metadata": {
     "collapsed": false
