Typo fix in ANN model

--- a/5DEEP/Project/notebooks/en/3-Basic_ANN_model.ipynb
+++ b/5DEEP/Project/notebooks/en/3-Basic_ANN_model.ipynb
@@ -915,7 +915,7 @@
    "source": [
     "The best model was selected based on the value of the loss. This means that no other ANN model, more or less trained, was better than this one.\n",
     "\n",
-    "The loss value between the training and test sets is almost the same. Our model neither over-fits nor under-fits the dataset. But, even with a good loss score, the accuracy of the model is pretty bad. It doesn't make big mistakes, but it often does."
+    "The loss value between the training and test sets is almost the same. But the low accuracy score on the training set and the test set implies that our model is under-fitted to the data set. The model cannot learn from the input data."
    ],
    "metadata": {
     "collapsed": false
