5: Model competition: Added a paragraph on the processing time

--- a/5DEEP/Project/notebooks/en/5-The_model_competition.ipynb
+++ b/5DEEP/Project/notebooks/en/5-The_model_competition.ipynb
@@ -2581,7 +2581,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The Chandelle model accumulates the most low scores, both in accuracy and recall. Toto and <NO_NAME> offer similar performance. Milva offers for almost all classes the best precision and recall score, which seems to confirm what the previous graphs have shown us."
+    "The Chandelle model accumulates the most low scores, both in accuracy and recall. Toto and <NO_NAME> offer similar performance. Milva offers for almost all classes the best precision and recall score, which seems to confirm what the previous graphs have shown us.\n",
+    "\n",
+    "### D.5 - Processing time\n",
+    "The last efficiency factor is the time required to train the model on the data set. All these models were trained on the same computer, so there is no possible difference due to better hardware.\n",
+    "\n",
+    "The first three models take between 10 and 15 minutes to train. Meanwhile, <NO_NAME> takes nearly 50 minutes to train, three times longer than the other models."
    ]
   },
   {
