5: Model competition: Trying custom sounds

--- a/5DEEP/Project/notebooks/en/1-Data_analysis.ipynb
+++ b/5DEEP/Project/notebooks/en/1-Data_analysis.ipynb
@@ -207,6 +207,7 @@
     "PARENT_FOLDER = Path.cwd()\n",
     "DATA_FOLDER = (PARENT_FOLDER / \"..\" / \"..\" / \"data\").resolve()\n",
     "URBAN_DATASET_FOLDER = DATA_FOLDER / \"UrbanSound8K\"\n",
+    "ADDED_SOUNDS_FOLDER = DATA_FOLDER / \"Added sounds\"\n",
     "MODELS_FOLDER = (PARENT_FOLDER / \"..\" / \"..\" / \"models\").resolve()\n",
     "TEMP_FOLDER = (PARENT_FOLDER / \"..\" / \"..\" / \"temp\").resolve()\n",
     "\n",
