4: The CNN model: Added a paragraph on EarlyStopping

--- a/5DEEP/Project/notebooks/en/4-The_CNN_model.ipynb
+++ b/5DEEP/Project/notebooks/en/4-The_CNN_model.ipynb
@@ -1007,7 +1007,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "These two graphs look better than with the ANN. We can see that the validation loss increases around the 60th epoch, our best model was taken at the 52nd epoch. It does not have the best accuracy (98.8 on the training set, 93.2 on the test set), but its loss value is very close to the lowest recorded."
+    "These two graphs look better than with the ANN. We can see that the validation loss increases around the 60th epoch, our best model was taken at the 52nd epoch. It does not have the best accuracy (98.8 on the training set, 93.2 on the test set), but its loss value is very close to the lowest recorded.\n",
+    "\n",
+    "We could have used the [EarlyStopping](https://keras.io/api/callbacks/early_stopping/) callback to stop training before over-fitting, but we wanted a history graph that fully shows when the model is too specific on the data set."
    ],
    "metadata": {
     "collapsed": false
