--- a/5DEEP/Project/notebooks/en/2-Data_preprocessing.ipynb
+++ b/5DEEP/Project/notebooks/en/2-Data_preprocessing.ipynb
@@ -331,7 +331,7 @@
    "cell_type": "markdown",
    "source": [
     "### B.5 - Mel-Frequency Cepstral Coefficients (MFCCs)\n",
-    "To fix the issue of the spectrogram, we can use a variant of it that use the Mel scale. In fact, we'll use a variant of the Mel spectrogram, the Mel Frequency Cepstral Coefficients (MFCC) also known as MFCC. An MFCC uses a quasi-logarithmic spaced frequency scale, which is more similar to how the human auditory system processes sounds. A Discrete Cosine Transform (DCT) is applied to the spectrogram to filter some data. This type of spectrogram is mainly used in speech recognition algorithms."
+    "To fix the issue of the spectrogram, we can use a variant of it that use the Mel scale. In fact, we'll use a variant of the Mel spectrogram, the Mel Frequency Cepstral Coefficients (MFCC). An MFCC uses a quasi-logarithmic spaced frequency scale, which is more similar to how the human auditory system processes sounds. A Discrete Cosine Transform (DCT) is applied to the spectrogram to filter some data. This type of spectrogram is mainly used in speech recognition algorithms."
    ],
    "metadata": {
     "collapsed": false
