--- a/5DEEP/Project/notebooks/fr/1-Analyse_des_données.ipynb
+++ b/5DEEP/Project/notebooks/fr/1-Analyse_des_données.ipynb
@@ -900,7 +900,7 @@
     "## E - Conclusion de l'analyse des données\n",
     "L'analyse du jeu de données nous permet d'observer plusieurs choses. Les métadonnées sont complètes et ne contiennent aucun doublon. Il n'est pas nécessaire de filtrer ou de normaliser ces données.\n",
     "\n",
-    "En revanche, les fichiers audio sont beaucoup plus anarchiques et disparates en termes de qualité sonore, de durée et de méthode d'enregistrement. Ces différences induisent de nouvelles variables que le modèle pourrait prendre en compte sans vraiment faire sens pour la classification. Un son long n'est pas toujours un marteau-piqueur. Le nombre de canaux d'un son n'est pas non plus un moyen de classer ce son. Il est donc nécessaire de lisser ces différences, soit par filtrage, soit par normalisation.\n",
+    "En revanche, les fichiers audio sont beaucoup plus anarchiques et disparates en termes de qualité sonore, de durée et de méthode d'enregistrement. Ces différences induisent de nouvelles variables que le modèle pourrait prendre en compte sans vraiment avoir du sens pour la classification. Un long son n'est pas toujours un marteau-piqueur. Le nombre de canaux d'un son n'est pas non plus un moyen de classer ce son. Il est donc nécessaire de lisser ces différences, soit par filtrage, soit par normalisation.\n",
     "\n",
     "Le filtrage nous permettrait de conserver tous les sons stéréo avec une qualité sonore satisfaisante. Cependant, cela entraînerait une perte considérable de données. Le jeu de données ne contient déjà que 8 732 enregistrements. Le raccourcir encore pourrait compromettre l'apprentissage du modèle.\n",
     "\n",
