--- a/5DEEP/Project/notebooks/en/4-The_CNN_model.ipynb
+++ b/5DEEP/Project/notebooks/en/4-The_CNN_model.ipynb
@@ -1064,7 +1064,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "We can easily see the diagonal from top-left corner to the bottom-right corner, which means that our model is not very confused. We notice a lower score for the `car_horn` and `gun_shot` classes, but these classes have almost 50% of data compared to the other classes.\n",
+    "We can easily see the diagonal from top-left corner to the bottom-right corner, which means that our model is not very confused. We notice a lower score for the `car_horn` and `gun_shot` classes, but these classes have almost 50% less data compared to the other classes.\n",
     "\n",
     "There is some confusion between classes of sounds that may seem similar: `engine_idling` and `air_conditioner`. But there is also confusion between classes that seem quite different. The class `children_playing` is most often confused with `dog_bark` and `street_music`.\n",
     "\n",
