--- a/5DEEP/Project/notebooks/en/5-The_model_competition.ipynb
+++ b/5DEEP/Project/notebooks/en/5-The_model_competition.ipynb
@@ -299,8 +299,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### C.2 - Second model: Chandelle\n",
-    "**TODO: Model description**"
+    "### C.2 - Second model: Chandelle"
    ]
   },
   {
@@ -902,8 +901,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### C.3 - Third model: Toto\n",
-    "**TODO: Model description**"
+    "### C.3 - Third model: Toto"
    ]
   },
   {
@@ -1516,8 +1514,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### C.4 - Fourth model: <NO_NAME>\n",
-    "**TODO: Model description**"
+    "### C.4 - Fourth model: <NO_NAME>"
    ]
   },
   {
