5MLRE: Data exploration: Started to merge the first notebook

--- a/5MLRE/Project/notebooks/en/1-Data_Exploration_macron.ipynb
+++ b/5MLRE/Project/notebooks/en/1-Data_Exploration_macron.ipynb
@@ -659,6 +659,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Ajouter explication sur une recommandation plus stricte pour les catégories adultes"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Ajouter analyse sur la colonne members"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Reconstruire les notes manquantes avec le dataset de notes ?"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
