--- a/5MLRE/Project/notebooks/en/1-Data_analysis.ipynb
+++ b/5MLRE/Project/notebooks/en/1-Data_analysis.ipynb
@@ -225,10 +225,12 @@
    ],
    "source": [
     "def duplicated_values(df, df_name: str = None) -> None:\n",
+    "    # Compute the dataset size, the count of duplicated value and the list of duplicated values\n",
     "    data_count = df.shape[0] * df.shape[1]\n",
     "    duplicated_count = df.duplicated().sum()\n",
     "    duplicated = df[df.duplicated(keep=False)] if (duplicated_count > 0) else None\n",
     "\n",
+    "    # Show the result\n",
     "    df_name = f\" ({df_name})\" if df_name is not None else \"\"\n",
     "    print(f\"{Style.BRIGHT}Duplicated values{df_name}:{Style.RESET_ALL} {duplicated_count} ({round((duplicated_count.sum() / data_count) * 100, 2)}%)\")\n",
     "    if duplicated is not None:\n",
@@ -296,14 +298,18 @@
    ],
    "source": [
     "def missing_values(df, df_name: str = None, keep_zeros=True) -> None:\n",
+    "    # Compute the dataset size and the count of missing value\n",
     "    data_count = df.shape[0] * df.shape[1]\n",
     "    missing = missing_df = df.isna().sum()\n",
     "\n",
+    "    # Filter out column with zero missing value\n",
     "    if not keep_zeros:\n",
     "        missing_df = missing_df[missing_df > 0]\n",
     "\n",
+    "    # Calculate the percent of missing values\n",
     "    missing_df = missing_df.sort_values(ascending=False).apply(lambda m: f\"{m} ({round((m * 100) / df.shape[0], 2)}%)\")\n",
     "\n",
+    "    # Show the result\n",
     "    df_name = f\" ({df_name})\" if df_name is not None else \"\"\n",
     "    print((\n",
     "        f\"{Style.BRIGHT}Missing values{df_name}:{Style.RESET_ALL} {round((missing.sum() / data_count) * 100, 2)}%\\n\"\n",
@@ -334,6 +340,7 @@
    "outputs": [],
    "source": [
     "def fill_empty_rating(row: pandas.Series) -> pandas.Series:\n",
+    "    # Fill the rating value if null\n",
     "    if pandas.isna(row[\"rating\"]):\n",
     "        ratings_list = data_ratings.index[data_ratings[\"anime_id\"] == row[\"anime_id\"]].tolist()\n",
     "        row[\"rating\"] = data_ratings.loc[ratings_list][\"rating\"].mean() if ratings_list else -1\n",
@@ -424,7 +431,7 @@
    "outputs": [],
    "source": [
     "data_anime[\"genre\"] = data_anime[\"genre\"].fillna(\"\")\n",
-    "data_anime.insert(\n",
+    "data_anime.insert(  # Insert the new column right after the \"genre\" column\n",
     "    loc=data_anime.columns.get_loc(\"genre\"),\n",
     "    column=\"genre_split\",\n",
     "    value=data_anime[\"genre\"].str.split(\", \").explode(\"genre\"),\n",
@@ -835,10 +842,10 @@
     }
    ],
    "source": [
-    "ratings_count_per_genre = data_anime.copy()[[\"genre_split\", \"num_ratings\"]]\n",
-    "ratings_count_per_genre = ratings_count_per_genre.set_index([\"num_ratings\"]).apply(pandas.Series.explode).reset_index()\n",
-    "ratings_count_per_genre = ratings_count_per_genre.groupby([\"genre_split\"]).sum()\n",
-    "ratings_count_per_genre = ratings_count_per_genre.sort_values(by=\"num_ratings\", ascending=False)\n",
+    "ratings_count_per_genre = data_anime.copy()[[\"genre_split\", \"num_ratings\"]]  # Duplicate the dataset\n",
+    "ratings_count_per_genre = ratings_count_per_genre.set_index([\"num_ratings\"]).apply(pandas.Series.explode).reset_index()  # Split the \"genre\" column\n",
+    "ratings_count_per_genre = ratings_count_per_genre.groupby([\"genre_split\"]).sum()  # Calculate the number of rating per genre\n",
+    "ratings_count_per_genre = ratings_count_per_genre.sort_values(by=\"num_ratings\", ascending=False)  # Sort the dataframe by the number of rating\n",
     "ratings_count_per_genre"
    ],
    "metadata": {
