5MLRE: Collaborative: Added note

--- a/5MLRE/Project/notebooks/en/2-Collaborative_filtering.ipynb
+++ b/5MLRE/Project/notebooks/en/2-Collaborative_filtering.ipynb
@@ -208,7 +208,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# C - Collaborative filtering: user-based"
+    "# C - Collaborative filtering: user-based\n",
+    "expliquer diff. user-based/item-based"
    ],
    "metadata": {
     "collapsed": false
