5MLRE: Collaborative filtering: Added all models

--- a/5MLRE/Project/notebooks/en/2-Collaborative_filtering.ipynb
+++ b/5MLRE/Project/notebooks/en/2-Collaborative_filtering.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "# OS and filesystem\n",
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "pyplot.rcParams.update(pyplot.rcParamsDefault)\n",
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "# Filesystem paths\n",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "# data_reader = surprise.Reader(line_format=\"user item rating\", sep=\",\", rating_scale=(1, 10), skip_lines=1)\n",
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "outputs": [],
    "source": [
     "data_train, data_test = surprise.model_selection.train_test_split(data, test_size=0.2, shuffle=True, random_state=RANDOM_STATE)"
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "outputs": [],
    "source": [
     "data_iterator = surprise.model_selection.KFold(n_splits=10, random_state=RANDOM_STATE, shuffle=True)"
@@ -208,7 +208,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# C - Collaborative filtering: user-based\n",
+    "# C - Collaborative filtering\n",
     "expliquer diff. user-based/item-based"
    ],
    "metadata": {
@@ -220,7 +220,12 @@
    "execution_count": 7,
    "outputs": [],
    "source": [
-    "model_definitions_user_based = {\n",
+    "model_definitions = {\n",
+    "    \"slope_one\": {\n",
+    "        \"name\": \"Slope One\",\n",
+    "        \"algo_class\": surprise.SlopeOne,\n",
+    "        \"hyper_params\": None\n",
+    "    },\n",
     "    \"knn_basic\": {\n",
     "        \"name\": \"KNN Basic\",\n",
     "        \"algo_class\": surprise.KNNBasic,\n",
@@ -229,7 +234,7 @@
     "            \"min_k\": [1, 2, 3, 5],\n",
     "            \"sim_options\": {\n",
     "                \"name\": [\"cosine\", \"msd\", \"pearson\", \"pearson_baseline\"],\n",
-    "                \"user_based\": [True]  # We want a user-based filtering\n",
+    "                \"user_based\": [True, False]\n",
     "            }\n",
     "        }\n",
     "    },\n",
@@ -241,7 +246,7 @@
     "            \"min_k\": [1, 2, 3, 5],\n",
     "            \"sim_options\": {\n",
     "                \"name\": [\"cosine\", \"msd\", \"pearson\", \"pearson_baseline\"],\n",
-    "                \"user_based\": [True]\n",
+    "                \"user_based\": [True, False]\n",
     "            }\n",
     "        }\n",
     "    },\n",
@@ -253,7 +258,7 @@
     "            \"min_k\": [1, 2, 3, 5],\n",
     "            \"sim_options\": {\n",
     "                \"name\": [\"cosine\", \"msd\", \"pearson\", \"pearson_baseline\"],\n",
-    "                \"user_based\": [True]\n",
+    "                \"user_based\": [True, False]\n",
     "            }\n",
     "        }\n",
     "    },\n",
@@ -265,12 +270,30 @@
     "            \"min_k\": [1, 2, 3, 5],\n",
     "            \"sim_options\": {\n",
     "                \"name\": [\"cosine\", \"msd\", \"pearson\", \"pearson_baseline\"],\n",
-    "                \"user_based\": [True]\n",
+    "                \"user_based\": [True, False]\n",
     "            },\n",
     "            \"bsl_options\": {\n",
     "                \"method\": [\"als\"],\n",
     "                \"n_epochs\": 10,\n",
     "            }\n",
+    "        }\n",
+    "    },\n",
+    "    \"non-negative_matrix_factorization\": {\n",
+    "        \"name\": \"Non-negative Matrix Factorization\",\n",
+    "        \"algo_class\": surprise.NMF,\n",
+    "        \"hyper_params\": {\n",
+    "            \"n_factors\": [5, 15, 25],\n",
+    "            \"n_epochs\": [25, 50, 75],\n",
+    "            \"biased\": [True, False]\n",
+    "        }\n",
+    "    },\n",
+    "    \"co-clustering\": {\n",
+    "        \"name\": \"Co-clustering\",\n",
+    "        \"algo_class\": surprise.CoClustering,\n",
+    "        \"hyper_params\": {\n",
+    "            \"n_cltr_u\": [1, 3, 5],\n",
+    "            \"n_cltr_i\": [1, 3, 5],\n",
+    "            \"n_epochs\": [10, 20, 30],\n",
     "        }\n",
     "    },\n",
     "}"
@@ -330,30 +353,36 @@
     "print(f\"{Style.BRIGHT}Testing multiple models...{Style.RESET_ALL}\")\n",
     "model_sep = f\"{Style.DIM}{Fore.WHITE}{'=' * 25}{Style.RESET_ALL}\"\n",
     "measure_key = \"rmse\"\n",
-    "models_user_based = {}\n",
+    "best_models = {}\n",
     "\n",
-    "for model_key in model_definitions_user_based:\n",
+    "for model_key in model_definitions:\n",
     "    # Initialize the model processing\n",
     "    model_start_time = timer()\n",
-    "    model_settings = model_definitions_user_based[model_key]\n",
+    "    model_settings = model_definitions[model_key]\n",
     "\n",
     "    print(f\"{model_sep}\\n{Fore.GREEN}Testing \\\"{model_settings['name']}\\\".{Fore.RESET}\")\n",
     "\n",
-    "    # Search the best estimator with GridSearch\n",
-    "    print(f\"Running GridSearchCV...{Fore.WHITE}{Style.DIM}\")\n",
-    "    with io.capture_output():\n",
-    "        grid_search = surprise.model_selection.GridSearchCV(\n",
-    "            algo_class=model_settings[\"algo_class\"],\n",
-    "            param_grid=model_settings[\"hyper_params\"],\n",
-    "            measures=[\"rmse\", \"mae\"],\n",
-    "            cv=data_iterator,\n",
-    "            refit=False,\n",
-    "            n_jobs=1,\n",
-    "            joblib_verbose=0\n",
-    "        )\n",
-    "        grid_search.fit(data)\n",
-    "    best_model = grid_search.best_estimator[measure_key]\n",
-    "    models_user_based[model_key] = best_model\n",
+    "    # Train the model\n",
+    "    if model_settings[\"hyper_params\"] is not None:  # If available, search the best estimator with GridSearch\n",
+    "        print(f\"Running GridSearchCV...{Fore.WHITE}{Style.DIM}\")\n",
+    "        with io.capture_output():\n",
+    "            grid_search = surprise.model_selection.GridSearchCV(\n",
+    "                algo_class=model_settings[\"algo_class\"],\n",
+    "                param_grid=model_settings[\"hyper_params\"],\n",
+    "                measures=[\"rmse\", \"mae\"],\n",
+    "                cv=data_iterator,\n",
+    "                refit=False,\n",
+    "                n_jobs=1,\n",
+    "                joblib_verbose=0\n",
+    "            )\n",
+    "            grid_search.fit(data)\n",
+    "\n",
+    "        best_model = grid_search.best_estimator[measure_key]\n",
+    "    else:\n",
+    "        best_model = model_definitions[\"algo_class\"]()\n",
+    "\n",
+    "    # Save the best model\n",
+    "    best_models[model_key] = best_model\n",
     "\n",
     "    # Accuracy calculation\n",
     "    best_model.fit(data_train)\n",
@@ -367,20 +396,6 @@
     "    model_end_time = timer()\n",
     "    model_elapsed_time = timedelta(seconds=model_end_time - model_start_time)\n",
     "    print(f\"Testing of the \\\"{model_settings['name']}\\\" model successfully completed in {model_elapsed_time}.\")"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "# E - Collaborative filtering: other\n",
-    "Slope One\n",
-    "Co-clustering\n",
-    "Non-negative Matrix Factorization\n",
-    "SVD\n",
-    "SVPPP"
    ],
    "metadata": {
     "collapsed": false
