--- a/5MLRE/Project/notebooks/en/1-Data_analysis.ipynb
+++ b/5MLRE/Project/notebooks/en/1-Data_analysis.ipynb
@@ -918,7 +918,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "**In line with the 50th quartile, the genre with the highest rating is \"Slice of Life\".\n",
+    "**In line with the 50th percentile, the genre with the highest rating is \"Slice of Life\".\n",
     "The lowest rating was given to \"Dementia\".**\n",
     "\n",
     "**The best average is given to the genre \"Thriller\" in absolute. However, according to the graph \"Distribution by genres\", this genre is very little present in the list and seems to agree with our theory.\n",
