--- a/5MLRE/Project/notebooks/en/2-Collaborative_filtering.ipynb
+++ b/5MLRE/Project/notebooks/en/2-Collaborative_filtering.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "# OS and filesystem\n",
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "pyplot.rcParams.update(pyplot.rcParamsDefault)\n",
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "# Filesystem paths\n",
@@ -149,18 +149,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "# data_reader = surprise.Reader(line_format=\"user item rating\", sep=\",\", rating_scale=(1, 10), skip_lines=1)\n",
     "# data = surprise.Dataset.load_from_file(file_path=(DATA_FOLDER / \"rating_cleaned.csv\"), reader=data_reader)\n",
     "\n",
-    "data = pandas.read_csv((DATA_FOLDER / \"rating_cleaned.csv\"))\n",
-    "data_filtered = data[data[\"rating\"] >= 0.0]\n",
-    "data_shortened = data.sample(n=10_000)\n",
+    "data_cleaned = pandas.read_csv((DATA_FOLDER / \"rating_cleaned.csv\"))\n",
+    "data_filtered = data_cleaned[data_cleaned[\"rating\"] >= 0.0]\n",
+    "data_shortened = data_filtered.sample(n=5000)\n",
     "\n",
     "data_reader = surprise.Reader(rating_scale=(1, 10))\n",
-    "data = surprise.Dataset.load_from_df(df=data_shortened, reader=data_reader)"
+    "data = surprise.Dataset.load_from_df(df=data_shortened[[\"user_id\", \"anime_id\", \"rating\"]], reader=data_reader)"
    ],
    "metadata": {
     "collapsed": false
@@ -169,7 +169,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## B - Data preparation\n",
+    "# B - Data preparation\n",
     "**TODO: Add text**\n",
     "\n",
     "### B.1 - Splitting the dataset\n",
@@ -181,13 +181,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "# data_train, data_test = surprise.model_selection.train_test_split(data, test_size=0.2, shuffle=True, random_state=RANDOM_STATE)\n",
-    "data_train_full = data.build_full_trainset()\n",
+    "\"\"\"data_train_full = data.build_full_trainset()\n",
     "data_test = data_train_full.build_testset()\n",
-    "data_anti_test = data_train_full.build_anti_testset()"
+    "data_anti_test = data_train_full.build_anti_testset()\"\"\""
    ],
    "metadata": {
     "collapsed": false
@@ -283,7 +283,7 @@
     "            },\n",
     "            \"bsl_options\": {\n",
     "                \"method\": [\"als\"],\n",
-    "                \"n_epochs\": 10,\n",
+    "                \"n_epochs\": [5, 10, 15],\n",
     "            }\n",
     "        }\n",
     "    },\n",
@@ -376,7 +376,6 @@
     "    print(f\"{model_sep}\\n{Fore.GREEN}Testing \\\"{model_settings['name']}\\\".{Fore.RESET}\")\n",
     "\n",
     "    # Train the model\n",
-    "    model_start_time = timer()\n",
     "    if model_settings[\"hyper_params\"] is not None:  # If available, search the best estimator with GridSearch\n",
     "        print(f\"Running GridSearchCV...{Fore.WHITE}{Style.DIM}\")\n",
     "        grid_search_start_time = timer()\n",
@@ -404,36 +403,58 @@
     "    best_models[model_key] = best_model\n",
     "\n",
     "    # Accuracy calculation\n",
-    "    model_start_time = timer()\n",
-    "    best_model.fit(data_train_full)\n",
-    "    left_out_predictions = best_model.test(data_test)\n",
-    "    all_predictions = best_model.test(data_anti_test)\n",
-    "    model_end_time = timer()\n",
+    "    model_start_time = model_end_time = None\n",
+    "    LOOCV = surprise.model_selection.LeaveOneOut(n_splits=1, min_n_ratings=1, random_state=RANDOM_STATE)\n",
     "\n",
-    "    print(f\"{Style.RESET_ALL}\")\n",
-    "    print(f\"{Style.BRIGHT}Best params:{Style.NORMAL} {Style.DIM}{Fore.WHITE}{best_params}{Style.RESET_ALL}\")\n",
-    "    print(f\"{Style.BRIGHT}RMSE:{Style.NORMAL} {surp_acc.rmse(left_out_predictions, verbose=False):.4f}\")\n",
-    "    print(f\"{Style.BRIGHT}MAE:{Style.NORMAL} {surp_acc.mae(left_out_predictions, verbose=False):.4f}\")\n",
-    "    print(\"\")\n",
+    "    for data_train_LOOCV, data_test_LOOCV in LOOCV.split(data):\n",
+    "        model_start_time = timer()\n",
+    "        best_models.fit(data_train_LOOCV)\n",
+    "        train_prediction = best_models.test(data_train_LOOCV.build_testset())\n",
+    "        left_out_predictions = test_prediction = best_models.test(data_test_LOOCV)\n",
+    "        all_predictions = best_models.test(data_train_LOOCV.build_anti_testset())\n",
+    "        model_end_time = timer()\n",
     "\n",
-    "    top_n = helpers.metrics.get_top_n(predictions=all_predictions, n=10, min_rating=4.0, verbose=True)\n",
-    "    helpers.metrics.get_hit_rate(top_n=top_n, left_out_predictions=left_out_predictions, auto_print=True)\n",
-    "    helpers.metrics.get_rating_hit_rate(top_n=top_n, left_out_predictions=left_out_predictions, auto_print=True)\n",
-    "    helpers.metrics.get_cumulative_hit_rate(top_n=top_n, left_out_predictions=left_out_predictions, min_rating=4.0, auto_print=True)\n",
-    "    helpers.metrics.get_average_reciprocal_hit_rank(top_n=top_n, left_out_predictions=left_out_predictions, auto_print=True)\n",
-    "    helpers.metrics.get_user_coverage(top_n=top_n, num_users=data_train_full.n_users, min_rating=4.0, auto_print=True)\n",
+    "        print(f\"{Style.RESET_ALL}\")\n",
+    "        print(f\"{Style.BRIGHT}Best params:{Style.NORMAL} {Style.DIM}{Fore.WHITE}{best_params}{Style.RESET_ALL}\")\n",
+    "        print((\n",
+    "            f\"{Style.BRIGHT}RMSE:{Style.NORMAL} \"\n",
+    "            f\"[train = {surp_acc.rmse(train_prediction, verbose=False):.4f} | \"\n",
+    "            f\"test = {surp_acc.rmse(test_prediction, verbose=False):.4f} ]\"\n",
+    "        ))\n",
+    "        print((\n",
+    "            f\"{Style.BRIGHT}MAE:{Style.NORMAL} \"\n",
+    "            f\"[train = {surp_acc.mae(train_prediction, verbose=False):.4f} | \"\n",
+    "            f\"test = {surp_acc.mae(test_prediction, verbose=False):.4f} ]\"\n",
+    "        ))\n",
+    "        print(\"\")\n",
+    "\n",
+    "        top_n = helpers.metrics.get_top_n(predictions=all_predictions, n=10, min_rating=4.0, verbose=True)\n",
+    "        helpers.metrics.get_hit_rate(top_n=top_n, left_out_predictions=left_out_predictions, auto_print=True)\n",
+    "        helpers.metrics.get_rating_hit_rate(top_n=top_n, left_out_predictions=left_out_predictions, auto_print=True)\n",
+    "        helpers.metrics.get_cumulative_hit_rate(top_n=top_n, left_out_predictions=left_out_predictions, min_rating=4.0, auto_print=True)\n",
+    "        helpers.metrics.get_average_reciprocal_hit_rank(top_n=top_n, left_out_predictions=left_out_predictions, auto_print=True)\n",
+    "        helpers.metrics.get_user_coverage(top_n=top_n, num_users=data_train_LOOCV.n_users, min_rating=4.0, auto_print=True)\n",
     "\n",
     "    # Final output\n",
     "    iteration_end_time = timer()\n",
     "    iteration_elapsed_time = timedelta(seconds=iteration_end_time - iteration_start_time)\n",
     "    grid_search_elapsed_time = timedelta(seconds=grid_search_end_time - grid_search_start_time) if grid_search_start_time is not None else None\n",
-    "    model_elapsed_time = timedelta(seconds=model_end_time - model_start_time)\n",
+    "    model_elapsed_time = timedelta(seconds=model_end_time - model_start_time) if model_start_time is not None else None\n",
     "    print((\n",
     "        f\"\\nTesting of the \\\"{model_settings['name']}\\\" model successfully completed in {iteration_elapsed_time}.\"\n",
     "        f\"\\nGrid search: {'N/A' if grid_search_elapsed_time is None else grid_search_elapsed_time}\"\n",
-    "        f\"\\nTraining and testing: {model_elapsed_time}\"\n",
+    "        f\"\\nTraining and testing: {'N/A' if model_elapsed_time is None else model_elapsed_time}\"\n",
     "    ))"
    ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false
    }
