5MLRE: Collaborative filtering: Typo fix

--- a/5MLRE/Project/notebooks/en/2-Collaborative_filtering.ipynb
+++ b/5MLRE/Project/notebooks/en/2-Collaborative_filtering.ipynb
@@ -367,7 +367,7 @@
     "print(f\"{Style.BRIGHT}Testing multiple models...{Style.RESET_ALL}\")\n",
     "model_sep = f\"{Style.DIM}{Fore.WHITE}{'=' * 25}{Style.RESET_ALL}\"\n",
     "measure_key = \"rmse\"\n",
-    "best_models = {}\n",
+    "models = {}\n",
     "\n",
     "for model_key in model_definitions:\n",
     "    # Initialize the model processing\n",
@@ -400,7 +400,7 @@
     "        grid_search_start_time = grid_search_end_time = None\n",
     "\n",
     "    # Save the best model\n",
-    "    best_models[model_key] = best_model\n",
+    "    models[model_key] = best_model\n",
     "\n",
     "    # Accuracy calculation\n",
     "    model_start_time = model_end_time = None\n",
@@ -408,10 +408,10 @@
     "\n",
     "    for data_train_LOOCV, data_test_LOOCV in LOOCV.split(data):\n",
     "        model_start_time = timer()\n",
-    "        best_models.fit(data_train_LOOCV)\n",
-    "        train_prediction = best_models.test(data_train_LOOCV.build_testset())\n",
-    "        left_out_predictions = test_prediction = best_models.test(data_test_LOOCV)\n",
-    "        all_predictions = best_models.test(data_train_LOOCV.build_anti_testset())\n",
+    "        best_model.fit(data_train_LOOCV)\n",
+    "        train_prediction = best_model.test(data_train_LOOCV.build_testset())\n",
+    "        left_out_predictions = test_prediction = best_model.test(data_test_LOOCV)\n",
+    "        all_predictions = best_model.test(data_train_LOOCV.build_anti_testset())\n",
     "        model_end_time = timer()\n",
     "\n",
     "        print(f\"{Style.RESET_ALL}\")\n",
@@ -434,6 +434,9 @@
     "        helpers.metrics.get_cumulative_hit_rate(top_n=top_n, left_out_predictions=left_out_predictions, min_rating=4.0, auto_print=True)\n",
     "        helpers.metrics.get_average_reciprocal_hit_rank(top_n=top_n, left_out_predictions=left_out_predictions, auto_print=True)\n",
     "        helpers.metrics.get_user_coverage(top_n=top_n, num_users=data_train_LOOCV.n_users, min_rating=4.0, auto_print=True)\n",
+    "\n",
+    "    # Save the model to the disk\n",
+    "    surprise.dump.dump(file_name=str(MODELS_FOLDER / model_settings[\"name\"]), algo=best_model)\n",
     "\n",
     "    # Final output\n",
     "    iteration_end_time = timer()\n",
